--- %YAML:1.0
- version: 2.0.11
  date: 2004-05-28
  changes:
    - Lines starting with div opening or closing tags aren't given paragraph tags.
    - Escaped some sample markup that was being translated by RDoc.
    - Subtle changes to the quick tags to help them interact with surrounding HTML better.
    - Ensure angle brackets inside code quick tags get escaped.
    - New patch and test by F. Ros to fix <pre> tags with class settings.
    - Work on the references to ensure they are generating at least XHTML 1.0 Transitional.

- version: 2.0.10
  date: 2004-05-26
  changes:
    - Table and list problems.  Rewrote the <pre> handling code.. again.

- version: 2.0.9
  date: 2004-05-26
  changes:
    - Improved RDoc.  Ri documentation is auto-installed now!
    - Links were consuming closing HTML tags.  (See latest test in tests/links.yml.)
    - Further speed patch from Denis.  Good good.
    - Patch by F. Ros to fix <pre> tags with class settings.

- version: 2.0.8
  date: 2004-05-22
  changes:
    - First scan of the glyphs() method only scans for pre|notextile|code, the
      deeper passes scan for all HTML.  Now inlines work around HTML tags!
      (What a pain!)
    - Moved tables and blocks into glyphs to keep them shielded from the parser
      if they are in <pre> tags.
    - Patch by Denis Mertz to speed up RedCloth by compiling the various RegExps
      only once.  Thanks, David!

- version: 2.0.7
  date: 2004-04-21
  changes:
    - New REFERENCE and QUICK-REFERENCE.  See http://hobix.com/textile/.
    - Lists rewritten to accomplish better line folding.
    - Better, greedier links.
    - Additional link and list tests.

- version: 2.0.6
  date: 2004-04-16
  changes:
    - Bold and strong tags were mixed up.  '*' is now strong.  '**' is bold.
      They were swapped until now.
    - Horizontal alignments were pretty buggy.  Combining alignments with
      indents was totally broken.