@@ -18,7 +18,7 @@ when 'README'
     <title>RedCloth [Textile Humane Web Text for Ruby]</title>
     <style type="text/css">
     BODY {
-        margin: 10px 60px;
+        margin: 10px 60px 40px 60px;
         font-family: georgia, serif;
         font-size: 12pt;
     }
@@ -75,6 +75,29 @@ when 'README'
         margin-left: 10px;
         width: 200px;
     }
+    /* VARIATION BUTTON STYLING (v2.0) - SIZABLE SIZE */
+    #css-buttons ul{list-style: none;margin: 0 0 10px 0;padding: 0;}
+    #css-buttons li{border: 1px solid #999; margin: 5px 0 0 20px; width:9.0em;}
+    head:first-child+body #css-buttons li{padding-right:2px;}
+    #css-buttons li a{color: #333; text-decoration: none;}
+
+    .css-button {
+        display:block;
+        font: 0.8em verdana, arial, sans-serif;
+        padding: 2px 0 2px 0px; border: 1px solid white;
+        text-decoration: none; width:100%;
+        background: #ddd;color: #333;
+    }
+
+    .css-button span {
+        font: bold 1.0em verdana, arial, sans-serif;
+        padding: 2px 3px 2px 3px; color: #fff;
+    }  
+
+    /* BUTTON LOGO STYLING */
+    .rss span{background:#f60;}
+    .w3c span {background: #fff; color: #069; font: bold 1.1em helvetica, arial, Sans-Serif;}
+    .w3c2{background: #fc6;color: black !important;}
     </style>
     </head>
     <body>
@@ -194,6 +217,9 @@ when 'REFERENCE'
 
     content = YAML::load( File.open( file_name ) )
 
+    sections = content.collect { |c| c.keys.first }
+    sections.shift
+
     puts <<-HTML
     <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
          "DTD/xhtml1-transitional.dtd">
@@ -220,15 +246,29 @@ when 'REFERENCE'
         font-size: 42pt;
     }
     H4 {
-        color: #999;
+        color: #666;
         background-color: #fee;
         border: solid 1px #caa;
-        margin: 10px 15px 5px 10px;
+        margin: 10px 0px 5px 0px;
         padding: 5px;
     }
     P {
         margin: 10px 15px 5px 15px;
     }
+    TD.sections {
+        background: black;
+        color: white;
+        font-family: georgia, serif;
+        font-weight: bold;
+        font-size: 9pt;
+        padding: 5px;
+    }
+    TD.sections A         { color: #CCEEFF; }
+    TD.sections A:link    { color: #CCEEFF; }
+    TD.sections A:visited { color: #CCEEFF; }
+    TD.sections A:active  { color: #EEEEEE; }
+    TD.sections A:hover   { color: #EEEEEE; }
+
     TD.example1 PRE {
         background-color: #B30;
         color: white;
@@ -237,7 +277,7 @@ when 'REFERENCE'
         font-size: 9pt;
         padding: 5px;
     }
-    TD.example2 PRE {
+    TD.example2 P {
         border: solid 1px #DDD;
         background-color: #EEE;
         font-family: georgia, serif;
@@ -278,13 +318,14 @@ when 'REFERENCE'
         section.each do |header, parags|
             if ct.zero?
                 puts "<tr><th colspan='3'><h1>#{ header }</h1></th></tr>"
+                puts "<tr><td class='sections' colspan='3'>Sections: #{ sections.collect { |s| "<a href='##{ a_name( s ) }'>#{ s.gsub( /\s/, '&nbsp;' ) }</a>" }.join( ' | ' ) }</td></tr>"
             else
-                puts "<tr><th colspan='3'><small>#{ ct }.</small><br />#{ header }</th></tr>"
+                puts "<tr><th colspan='3'><a name='#{ a_name( header ) }'><small>#{ ct }.</small></a><br />#{ header }</th></tr>"
             end
             parags.each do |p|
                 if p.is_a? Array
                     puts "<tr><td class='example1' valign='top'><pre>#{ p[0] }</pre></td><td>&rarr;</td>" +
-                             "<td class='example2'><pre>#{ p[1] }</pre></td></tr><tr><td colspan='2'></td>" +
+                             "<td class='example2'><p>#{ p[1] }</p></td></tr><tr><td colspan='2'></td>" +
                              "<td class='example3'>#{ p[2] }</td></tr>"
                 else
                     puts "<tr><td class='explain' colspan='3'>"
