@@ -32,3 +32,6 @@ out: |-
   0.1</a> &#8211; First cut of new system. Much cleaner.</li>
   		<li><a href="http://www.threewordslong.com/chunk-0-2.patch.gz">Version 0.2</a> &#8211; Fixed problem with &#8220;authors&#8221; page and some tests.</li>
   	</ul>
+---
+in: "--richSeymour --whyTheLuckyStiff"
+out: "<p>&#8212;richSeymour&#8212;whyTheLuckyStiff</p>"
